# offline.cat

./: .gitignore  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  playwright.config.ts  react-router.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  validate.yml
app/: app.css  root.tsx  routes.ts  test-setup.ts
app/components/: ConfirmDialog.test.tsx  ConfirmDialog.tsx  DocumentCanvas.test.tsx  DocumentCanvas.tsx  EditorCanvas.tsx  HomeLogoLink.tsx  HtmlCanvas.test.tsx  HtmlCanvas.tsx  IconButtonTooltip.tsx  InspectorPanel.test.ts  InspectorPanel.test.tsx  InspectorPanel.tsx  LocaleSwitcher.tsx  ModelPickerSelect.tsx  NavigatorSidebar.tsx  OutlineSidebar.tsx  SegmentListEditor.tsx  SidebarViewToggle.test.tsx  SidebarViewToggle.tsx  SlashCommandMenu.test.tsx  SlashCommandMenu.tsx  SlideCanvas.tsx  SlideThumbnail.tsx  Toast.css  ToastRegion.tsx  download-icon.tsx  error-icon.tsx  github-icon.tsx  inspector-toggle-icon.tsx  layout-icon.tsx  plus-icon.tsx  (+5 more)
docs/: STYLE.md  pptx.md
e2e/: README.md  canvas-modes.spec.ts  capture-demo.spec.ts  translate-flow.spec.ts  upload-and-parse.spec.ts
public/: header-highlight.js  sw.js
rfc/: 0001-sqlite-wasm-migration.md  0002-document-canvas-editor.md  0003-rust-wasm-parsers.md  0004-tauri-desktop-local-models.md
rfd/: 0001-sqlite-wasm-migration.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  commands.rs  downloader.rs  engine.rs  lib.rs  main.rs  state.rs
(+98 files in other folders)
